--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
 :root {
-  --red-color: #ec3f3c;
   --blue-color: #01aeef;
+  --dark-blue-color: #365da8;
+  --red-color: #ec3f3c;
+  --text-color: #333333;
+  --background-color: #dfdddd;
+  --black-color: #000000;
+  --white-color: #ffffff;
 }
 * {
   margin: 0;
@@ -11,28 +16,81 @@
   scroll-behavior: smooth;
   font-family: "Poppins", sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
+section {
+  scroll-margin-top: 220px; /* Adjust to match your header height */
+}
+
 body {
   background-color: #f9f9f9;
   color: #333;
 }
+
 header {
-  background-color: #0066cc;
+  background-color: var(--red-color);
   color: white;
   padding: 1rem;
+}
+header > #company {
   text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header > #company > #logoandName {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin-bottom: 0rem;
+}
+header > #company > #logoandName > img {
+  height: 100%;
+  width: 20%;
+}
+#company > #logoandName > .name {
+  font-size: 2.5rem;
+  font-family: "Playfair Display", sans-serif;
+}
+.nav-links {
+  list-style: none;
 }
 nav {
   display: flex;
   flex-direction: column;
-  background-color: #004c99;
   color: white;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.1rem;
+  border-radius: 8px;
+  line-height: 3rem;
+}
+nav li {
+  background-color: var(--blue-color);
+  border-radius: 5px;
+  margin: 5px;
+  padding: 0rem 1rem;
 }
 nav a {
   color: white;
   text-decoration: none;
   padding: 0.5rem 0;
 }
+/* Initial hidden state */
+.nav-links.hidden-nav {
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: all 0.4s ease-in-out;
+}
+
+/* Shown state */
+.nav-links.open-nav {
+  max-height: 300px; /* adjust based on your content height */
+  opacity: 1;
+  transition: all 0.4s ease-in-out;
+  flex-direction: column;
+}
+
 section {
   padding: 1rem;
 }
@@ -73,3 +131,15 @@ footer {
     padding: 1rem;
   }
 }
+
+/* animation */
+/* .reveal {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.reveal.active {
+  opacity: 1;
+  transform: translateY(0);
+} */
