--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ section {
 }
 
 .hero-content h1 {
-  font-size: 2.8rem;
+  font-size: 2.3rem;
   line-height: 1.2;
 }
 
@@ -170,7 +170,8 @@ nav a {
   align-items: center;
   justify-content: flex-start;
   white-space: nowrap;
-  color: var(--red-color);
+  /* color: var(--red-color); */
+  color: rgb(250, 250, 6);
 }
 
 @keyframes scrollWords {
