--- a/style.css
+++ b/style.css
@@ -65,6 +65,8 @@ section {
 .hero-content h1 {
   font-size: 2.3rem;
   line-height: 1.2;
+  font-weight: 200;
+  font-family: "Times New Roman", Times, serif;
 }
 
 /* Body & Global */
