--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 
 :root {
   --blue-color: #01aeef;
   --dark-blue-color: #365da8;
+  --extra-dark-blue: rgb(1, 1, 107);
   --red-color: #ec3f3c;
   --text-color: #333333;
   --background-color: #dfdddd;
@@ -30,7 +32,7 @@ section {
 /* Hero Section */
 .hero {
   position: relative;
-  height: 90vh;
+  height: 85vh;
   overflow: hidden;
 }
 
@@ -60,13 +62,15 @@ section {
   justify-content: center;
   color: white;
   z-index: 1;
+  text-align: center;
 }
 
 .hero-content h1 {
-  font-size: 2.3rem;
+  font-size: 3rem;
   line-height: 1.2;
   font-weight: 200;
-  font-family: "Times New Roman", Times, serif;
+  /* font-family: "Times New Roman", Times, serif; */
+  font-family: "Dancing Script";
 }
 
 /* Body & Global */
@@ -96,12 +100,11 @@ header {
 }
 
 #logoandName img {
-  height: 100%;
-  width: 20%;
+  width: 15%;
 }
 
 #logoandName .name {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-family: "Playfair Display", serif;
 }
 
@@ -114,13 +117,13 @@ nav {
   display: flex;
   flex-direction: column;
   color: white;
-  padding: 0.5rem 0.1rem;
   border-radius: 8px;
   line-height: 3rem;
 }
 
 nav li {
-  background-color: var(--blue-color);
+  /* background-color: var(--dark-blue-color); */
+  background-color: rgb(1, 1, 107);
   border-radius: 5px;
   margin: 5px 0;
   padding: 0 1rem;
@@ -170,7 +173,7 @@ nav a {
   display: flex;
   line-height: 1rem;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   white-space: nowrap;
   /* color: var(--red-color); */
   color: rgb(250, 250, 6);
