--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@
 html {
   scroll-behavior: smooth;
 }
+/* Body & Global */
+body {
+  background-color: #f9f9f9;
+  color: var(--text-color);
+}
 
 section {
   scroll-margin-top: 220px;
@@ -63,6 +68,8 @@ section {
   color: white;
   z-index: 1;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .hero-content h1 {
@@ -72,13 +79,15 @@ section {
   /* font-family: "Times New Roman", Times, serif; */
   font-family: "Dancing Script";
 }
-
-/* Body & Global */
-body {
-  background-color: #f9f9f9;
-  color: var(--text-color);
+#motto {
+  font-size: 1.5rem;
 }
-
+#next {
+  /* color: yellow; */
+  color: rgb(255, 72, 0);
+  font-weight: bold;
+  font-size: 2.2rem;
+}
 /* Header */
 header {
   background-color: var(--red-color);
