radius removed of contact-wrapper

--- a/style.css
+++ b/style.css
@@ -482,7 +482,7 @@ footer {
 
 /* Contact  */
 .contact-section {
-  padding: 2rem 0.1rem;
+  padding: 2rem 0rem;
   /* text-align: center; */
 }
 
@@ -509,7 +509,7 @@ footer {
     center/cover no-repeat;
   position: relative;
   padding: 3rem 1rem;
-  border-radius: 1rem;
+  /* border-radius: 1rem; */
   max-width: 600px;
   margin: 0 auto;
   overflow: hidden;
