--- a/style.css
+++ b/style.css
@@ -268,6 +268,7 @@ footer {
   padding: 1rem;
   text-align: center;
   margin-top: 2rem;
+  font-size: 0.6rem;
 }
 
 /* Responsive Navigation */
@@ -649,4 +650,9 @@ footer {
 h2 {
   font-size: 2rem;
   font-family: "Playfair Display", serif;
+}
+
+#developerLink {
+  color: white;
+  /* text-decoration: none; */
 }
